tests/valid/01_function.cps
function add(a: integer, b: integer): integer { return a + b; }
let z: integer = add(1, 2);
