tests/invalid/03_notOk.cps
let a: integer = 1;
a = "hola";  